implementation_level/k8s/mail-pipeline/text_analyzer/text_analyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-analyzer
  template:
    metadata:
      labels:
        app: text-analyzer
    spec:
      containers:
        - name: text-analyzer
          image: giovaz94/mail-pipeline-general
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: text-analyzer-service
  labels:
    type: text-analyzer-service-type
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    app: text-analyzer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: text-analyzer-service
spec:
  host: text-analyzer-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: text-analyzer-service
spec:
  hosts:
    - text-analyzer-service
  http:
    - route:
        - destination:
            host: text-analyzer-service
